--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         height="100%"
       />
     </div>
-    <div class="secondPage"></div>
+    <div class="secondPage">
+      <img src="https://i.postimg.cc/xjFjcDXK/pedro.jpg" />
+    </div>
   </body>
 </html>
