--- a/index.html
+++ b/index.html
@@ -5,15 +5,53 @@
     <title>Index</title>
   </head>
   <body>
-    <div class="firstPage">
+    <div class="portada">
       <img
-        src="https://i.postimg.cc/g0mmpCRX/inicio.jpg"
+        src="https://i.postimg.cc/XqmKHHQp/CARTA-QUIMBAYA.png"
+        width="100%"
+      />
+    </div>
+    <div class="cafepage">
+      <img
+        src="https://i.postimg.cc/tCnYtCPq/CAFE.png"
         width="100%"
         height="100%"
       />
     </div>
-    <div class="secondPage">
-      <img src="https://i.postimg.cc/xjFjcDXK/pedro.jpg" />
+    <div class="bebidaspage">
+      <img
+        src="https://i.postimg.cc/d1zDgbcP/BEBIDAS-FRIAS.png"
+        width="100%"
+        height="100%"
+      />
+    </div>
+    <div class="menupremiere">
+      <img
+        src="https://i.postimg.cc/MGn6x9DW/MENU-PREMIERE.png"
+        width="100%"
+        height="100%"
+      />
+    </div>
+    <div class="helados">
+      <img
+        src="https://i.postimg.cc/9QMVtLsG/HELADOS.png"
+        width="100%"
+        height="100%"
+      />
+    </div>
+    <div class="cocktails">
+      <img
+        src="https://i.postimg.cc/pL4NQRfH/COCKTAILS.png"
+        width="100%"
+        height="100%"
+      />
+    </div>
+    <div class="juegosmesa">
+      <img
+        src="https://i.postimg.cc/gcNTqGpT/JUEGOS-DE-MESA.png"
+        width="100%"
+        height="100%"
+      />
     </div>
   </body>
 </html>
